tests/vertical-slice/accept/imported_fn_local_shadow/m.hew
pub fn matching() -> i64 {
    99
}

pub fn mismatched() -> i64 {
    99
}
